--- a/projects/codesandbox-app/index.html
+++ b/projects/codesandbox-app/index.html
@@ -88,7 +88,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <div id="root">
 </div>
-<script src="index.js"></script>
+<!-- <script src="index.js"></script> -->
 </body>
 
 </html>
