--- a/projects/codesandbox-app/index.html
+++ b/projects/codesandbox-app/index.html
@@ -53,9 +53,9 @@
     </script>
     <!-- End Google Tag Manager -->
     <!-- <script async src="//cdn.headwayapp.co/widget.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/BrowserFS/2.0.0/browserfs.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/BrowserFS/2.0.0/browserfs.min.js"></script> -->
 
-    <script>
+    <!-- <script>
       if (window.BrowserFS) {
         window.process = {
           env: {
@@ -71,7 +71,7 @@
         window.Buffer = window.BrowserFS.BFSRequire('buffer').Buffer;
         window.require = window.BrowserFS.BFSRequire.bind(BrowserFS);
       }
-    </script>
+    </script> -->
 
     <!--<link data-name="/public/vscode22/vs/editor/editor.main" rel="preload" as="style"-->
           <!--href="/public/vscode22/vs/editor/codesandbox.editor.main.css">-->
